--- a/viewProducts.html
+++ b/viewProducts.html
@@ -11,7 +11,8 @@
         }
         a
         {
-            margin-left:400px; 
+            font-weight:bold;
+            margin-left:900px; 
             color:black;
             font-family: 'Exo 2', sans-serif;
             text-decoration: none;
