--- a/cart.html
+++ b/cart.html
@@ -21,9 +21,9 @@
         <div id="divListOfProducts">
         </div>
         <div>
-            <button style="margin-top:20px;margin-left: 500px;background-color: white;color: black;border: 2px solid #555555;" id="checkOut" onclick="checkOut()">Check Out</button>
-            
-            <button style="margin-top:20px;margin-left: 40px;background-color: white;color: black;border: 2px solid #555555;" id="continue" onclick="continueToShop()">Continue Shopping</button>
+            <p id="total" style="float: right; clear:both;margin-top:40px;margin-left:30px;margin-right:650px;font-size:20px;"><b>Total : </b></p>
+            <button style="float: right; clear:both;margin-top:40px;margin-left:30px;margin-right:600px;background-color: white;color: black;border: 2px solid #555555;" id="checkOut" onclick="checkOut()">Check Out</button> 
+            <button style="float:right; margin-top:40px;margin-left: 40px;background-color: white;color: black;border: 2px solid #555555;" id="continue" onclick="continueToShop()">Continue Shopping</button>
             </div>
         </div>
     </body>
