--- a/products.html
+++ b/products.html
@@ -24,7 +24,7 @@
         }
         a:hover{
             transition: 0.5s;
-            color:#f00;
+            color:grey;
         }
     </style>
     </head>
