--- a/SignUp.html
+++ b/SignUp.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
 <title>Sign Up</title>
 <body onload="getRegisteredUser()">
+    <div class="pic"></div>
     <div id="main">
         <h1>Sign Up</h1>
         <form id="formm">
