--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
 <title>Login</title>
     </head>
 <body onload="getRegisteredUser()">
+    <div class="pic"></div>
     <div id="main">
         <h1>Sign In</h1>
         <form id="formm">
@@ -23,7 +24,7 @@
         <b><input style="margin-left:15px;"id="btn" type="button" onclick="location.href='SignUp.html'" value="Sign Up"></b><br>
         <b><input style="width:200px; background: none;margin-top: 20px;border: none;" type="button" onclick="location.href='viewProducts.html'" value="Continue without SignIn"></b>
         </form>
-            </div> 
+    </div>
     </body>
   <script src="login.js" type="text/javascript"></script>
 </html>
