--- a/cart.html
+++ b/cart.html
@@ -13,6 +13,13 @@
             margin-top: 30px;
             color: #262626;
         }
+        .productDiv:hover{
+            box-shadow: 0px 4px 8px #ccc;
+        }
+        .buttons:hover{
+            background: black;
+            color: white;
+        }
     </style>
     </head>
     <body onload="getStoredProducts()">
