--- a/products.html
+++ b/products.html
@@ -26,14 +26,17 @@
             transition: 0.5s;
             color:grey;
         }
+        .productDiv:hover{
+            box-shadow: 0px 4px 8px #ccc;
+        }
     </style>
     </head>
     <body onload="getStoredProducts()">
     <div class="main">
     <a href="#" id="aAddNewProduct">Add new Product</a>
     <div id="divAddProduct">
-        
         </div>
+        <a style="float:right;margin-top:-20px;margin-right: 50px;" href="orders.html">All Orders</a>
         <div><h3>List of Products : </h3></div>
         <div id="divListOfProducts">
         
